2018-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/restrict.c:
	  Test for bug #2714.

2018-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/collate-results.py,
	  support/valdiag/valdiag.py: replace use of deprecated
	  functions for better Python 3 compatibility

2018-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/collate-results.py,
	  support/regression/compact-results.py,
	  support/valdiag/valdiag.py:
	  Convert Python 1 to Python 2/3.
	* support/regression/tests/qsort.c:
	  Disable test for mcs51-small due to lack of RAM.
	* sim/ucsim/cmd.src/cmdlex.cc:
	  Remove lex-generated file from repository.

2018-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2716.c:
	  Fix bug #2716.
	* src/SDCCopt.c:
	  Disable fix for non-connected live-ranges for ds390.
	* device/include/stdlib.h,
	  device/lib/bsearch.c,
	  device/lib/incl.mk,
	  support/regression/tests/qsort.c:
	  Implement bsearch().
	* support/valdiag/valdiag.py,
	  support/valdiag/Makefile.in:
	  Include z180, r2k, gbz80, tlcs90, s08, stm8 in diagnostic validation.
	* support/regression/generate-cases.py,
	  support/regression/HTMLgen.py,
	  support/regression/get_ticks.py:
	  Convert Python 1 to Python 2/3.

2018-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix --reserve-regs-iy issue in function pointers to functions returning long long.

2018-03-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCralloc.hpp:
	  Fix --dump-graphs debug output for non-connected live-ranges.
	* src/SDCClrange.c,
	  src/SDCCopt.c:
	  Fix non-connected live-ranges, bugs #2525, #2644, #2266, #2319.

2018-03-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-1981238.c,
	  support/regression/tests/gcc-torture-execute-20141107-1.c,
	  support/regression/tests/gcc-torture-execute-920711-1.c: Test for